plugins {
    id 'aipr.spring-boot-conventions'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'jacoco'
}

group = 'ai.aipr'
version = rootProject.version

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}


dependencies {
    // Spring Boot
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-cache'

    // Database
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    runtimeOnly 'org.postgresql:postgresql'
    implementation 'org.flywaydb:flyway-core'

    // JSON & Serialization
    implementation libs.jackson.databind
    implementation libs.jackson.datatype.jsr310

    // gRPC (for engine communication)
    implementation libs.grpc.netty
    implementation libs.grpc.protobuf
    implementation libs.grpc.stub
    implementation libs.grpc.services
    implementation libs.grpc.spring.boot.starter

    // Proto-generated classes
    implementation project(':proto-java')

    // Observability
    implementation 'io.micrometer:micrometer-registry-prometheus'
    implementation 'io.opentelemetry:opentelemetry-api:1.32.0'

    // JSON Schema validation
    implementation 'com.networknt:json-schema-validator:1.0.87'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'

    // HTTP Client
    implementation 'com.squareup.okhttp3:okhttp:4.12.0'

    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'com.h2database:h2'
    testImplementation libs.junit.jupiter
    testImplementation libs.mockito.core
    testRuntimeOnly libs.junit.platform.launcher
}

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

// JaCoCo Test Coverage
jacoco {
    toolVersion = "0.8.11"
}

jacocoTestReport {
    dependsOn test

    reports {
        xml.required = true
        html.required = true
        csv.required = false
    }

    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                '**/config/**',
                '**/model/**',
                '**/*Config.class',
                '**/*Application.class'
            ])
        }))
    }
}

jacocoTestCoverageVerification {
    violationRules {
        rule {
            limit {
                minimum = 0.60  // 60% minimum coverage
            }
        }
    }
}

// Disable fat JAR (bootJar) - we use thin JAR with external dependencies
bootJar {
    enabled = false
}

// Enable standard thin JAR (just compiled classes, no embedded dependencies)
jar {
    enabled = true
    archiveFileName = "aipr-server.jar"

    manifest {
        attributes(
            'Main-Class': 'ai.aipr.server.AiprServerApplication',
            'Implementation-Title': 'AI PR Reviewer Server',
            'Implementation-Version': project.version
        )
    }
}
